# sfml_playground

./: .gitignore  CMakeLists.txt
assets/levels/: testlevel.json
src/: director.cpp  director.h  fontmanager.h  main.cpp  texturemanager.h
src/engine/: clock.h  director.cpp  director.h  node.cpp  node.h  node2d.cpp  nodetext.cpp  texturemanager.cpp  texturemanager.h
src/game/: gameconst.h  gamedirector.cpp  gamedirector.h  gamescene.cpp  gamescene.h  worldstate.h
src/game/leveldesc/: block.h  blocktype.h  column.h  layer.h  layerobject.h  level.cpp  level.h  levelloader.cpp  levelloader.h  objectdesc.h  row.h
